6.1
	+ Fix Dynamic DNS updates
	+ Set version to 6.1
6.0
	+ Set version to 6.0
5.1.1
	+ Fix parse of DHCP events in syslog
	+ Fix dhcp-parameter-request-list options concatenation
5.1
	+ Supress annoying vendor-class-identifier warnings in zentyal.log
	+ Add TFTP functionality again
	+ Support for options 150 and 155 in commercial editions
	+ Fix module restart in postinst
5.0
	+ Disable TFTP
	+ Display unknown hostnames as 'Unknown' in leases widget instead
	  of an empty string.
4.2
	+ Clarify error message in fixed addresses table
4.1.1
	+ Fix regression in leases information in dashboard widget
4.1
	+ Avoid statement not recognized errors parsing ddns keys in leases file
	+ Set version to 4.1
4.0.1
	+ TFTP service is now properly managed
4.0
	+ Set version to 4.0
	+ Forbid the addition of a fixed addresses object which
	  collides with a range
	+ Restored thin client options for VLANs
	+ Added ComponentNotExists error when losing parent row
3.5
	+ Notify when we are using a Domain in Dynamic DNS when it is
	  about to be removed
	+ Make Zentyal NTP server default choice for ntp server in dhcp
	+ Set version to 3.5
3.4
	+ Fixed ThinClientOptions nextServer value for interfaces other than eth0
	+ More generic help message for thin clients options page
	+ Added HA floating IPs constraints when creating ranges and fixed IPs
	+ Use service instead of deprecated invoke-rc.d for init.d scripts
	+ Set version to 3.4
3.3
	+ Switch from Error to TryCatch for exception handling
	+ Added missing EBox::Exceptions uses
	+ Delete migration code from old versions
	+ Fixed regression which broke DHCP next-server options being written
	  to config (Contributed by on-jz)
	+ Set version to 3.3
3.2
	+ Set version to 3.2
3.1.4
	+ Override daemons when migrating from 3.0
3.1.3
	+ Removed integration with ltsp module
3.1.2
	+ Better warnings for fixed addresses objects with same member
	  name or mac
3.1.1
	+ Adapted to updatedRowNotify call with no changes in values